--- a/css/styles.css
+++ b/css/styles.css
@@ -84,8 +84,8 @@ body {
   color: var(--hover-cl);
 }
 
-.current::after{
-  content: '';
+.current::after {
+  content: "";
   position: absolute;
   left: 0;
   bottom: 0;
@@ -96,7 +96,7 @@ body {
   background-color: var(--hover-cl);
 }
 
-.header-li-link.current{
+.header-li-link.current {
   color: var(--hover-cl);
 }
 
@@ -176,7 +176,8 @@ body {
   cursor: pointer;
   margin-left: 493px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transition: background-color var(--transition-duration) var(--transition-timing-function);
+  transition: background-color var(--transition-duration)
+    var(--transition-timing-function);
 }
 
 .banner-button:hover,
@@ -305,7 +306,8 @@ body {
   fill: var(--section-cl);
   background-color: var(--accent-cl);
   border-radius: 50%;
-  transition: background-color var(--transition-duration) var(--transition-timing-function);
+  transition: background-color var(--transition-duration)
+    var(--transition-timing-function);
 }
 
 .team-icons-link:hover,
@@ -337,7 +339,8 @@ body {
   height: 100%;
   border: 1px solid var(--customers-icon);
   border-radius: 4px;
-  transition: color var(--transition-duration) var(--transition-timing-function), border-color var(--transition-duration) var(--transition-timing-function);
+  transition: color var(--transition-duration) var(--transition-timing-function),
+    border-color var(--transition-duration) var(--transition-timing-function);
 }
 
 .customers-link:hover,
@@ -425,7 +428,11 @@ body {
   padding: 12px 24px;
   border: 1px solid var(--cards-cl);
   border-radius: 4px;
-  transition: background-color var(--transition-duration) var(--transition-timing-function), color var(--transition-duration) var(--transition-timing-function), box-shadow var(--transition-duration) var(--transition-timing-function), border var(--transition-duration) var(--transition-timing-function);
+  transition: background-color var(--transition-duration)
+      var(--transition-timing-function),
+    color var(--transition-duration) var(--transition-timing-function),
+    box-shadow var(--transition-duration) var(--transition-timing-function),
+    border var(--transition-duration) var(--transition-timing-function);
 }
 .main-button:hover,
 .main-button:focus {
@@ -439,7 +446,8 @@ body {
 
 .main-card-link {
   display: block;
-  transition: box-shadow var(--transition-duration) var(--transition-timing-function);
+  transition: box-shadow var(--transition-duration)
+    var(--transition-timing-function);
 }
 
 .main-card-link:hover,
@@ -463,7 +471,8 @@ body {
   background-color: var(--accent-cl);
   padding: 40px 32px 0;
   transform: translate(0, 100%);
-  transition: transform var(--transition-duration) var(--transition-timing-function);
+  transition: transform var(--transition-duration)
+    var(--transition-timing-function);
 }
 
 .main-card-link:hover .overlay,
@@ -504,7 +513,7 @@ body {
   align-items: baseline;
 }
 
-.footer-second-container{
+.footer-second-container {
   margin-left: 120px;
 }
 
@@ -535,7 +544,8 @@ body {
   height: 100%;
   background-color: var(--accent-cl);
   border-radius: 50%;
-  transition: background-color var(--transition-duration) var(--transition-timing-function);
+  transition: background-color var(--transition-duration)
+    var(--transition-timing-function);
 }
 
 .footer-icons-link:hover,
@@ -556,7 +566,9 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity var(--transition-duration) var(--transition-timing-function), visibility var(--transition-duration) var(--transition-timing-function);
+  transition: opacity var(--transition-duration)
+      var(--transition-timing-function),
+    visibility var(--transition-duration) var(--transition-timing-function);
 }
 
 .modal {
@@ -570,9 +582,10 @@ body {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  padding: 72px 24px 24px;
 }
 
-.modal-close-button{
+.modal-close-button {
   position: absolute;
   top: 24px;
   right: 24px;
@@ -584,28 +597,76 @@ body {
   background-color: var(--cards-cl);
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  transition: background-color var(--transition-duration) var(--transition-timing-function);
+  transition: background-color var(--transition-duration)
+    var(--transition-timing-function);
 }
 
-.modal-close-icon{
+.modal-close-icon {
   transition: fill var(--transition-duration) var(--transition-timing-function);
 }
 
 .modal-close-button:hover,
-.modal-close-button:focus{
+.modal-close-button:focus {
   background-color: var(--hover-cl);
   cursor: pointer;
 }
 
 .modal-close-button:hover .modal-close-icon,
-.modal-close-button:focus .modal-close-icon{
+.modal-close-button:focus .modal-close-icon {
   fill: var(--background-cl);
 }
 
-.is-hidden{
+.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding-left: 38px;
+}
+.modal-label-text-first {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.04em;
+  color: var(--customers-icon);
+}
+.modal-label-text {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.01em;
+  color: var(--customers-icon);
+}
+.modal-form-text{
+  font-weight: 500;
+  text-align: center;
+  color: var(--secondary-txt-cl);
+  margin-bottom: 16px;
+}
+.modal-label{
+  margin-bottom: 8px;
+}
+.modal-form-svg{
+  position: absolute;
+  left: 16px;
+  top: 11px;
+  fill: var(--secondary-txt-cl);
+}
+.modal-input-div{
+  position: relative;
 }
 /* Reset */
 
