--- a/css/styles.css
+++ b/css/styles.css
@@ -214,20 +214,6 @@ body {
   color: var(--main-txt-cl);
 }
 
-.main-dscr-item {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 .dscr-icons-div {
   display: flex;
   align-items: center;
@@ -353,20 +339,6 @@ body {
   fill: currentColor;
 }
 /* Portfolio */
-
-.main-services {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
 
 .portfolio-name {
   font-weight: 500;
@@ -556,7 +528,52 @@ body {
 .footer-svg-icon {
   fill: var(--section-cl);
 }
-
+.footer-form {
+  margin-left: 80px;
+}
+.footer-form-text {
+  font-weight: 500;
+  color: var(--background-cl);
+  margin-bottom: 16px;
+}
+.footer-input {
+  width: 264px;
+  height: 40px;
+  font-size: 12px;
+  line-height: 2;
+  color: var(--background-cl);
+  padding: 8px 16px;
+  border: 1px solid var(--background-cl);
+  border-radius: 4px;
+  background-color: transparent;
+  margin-right: 24px;
+  transition: border var(--transition-duration)
+    var(--transition-timing-function);
+}
+.footer-input:focus {
+  border: 1px solid var(--accent-cl);
+  outline: none;
+}
+.footer-button-send {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  padding: 8px 24px;
+  gap: 16px;
+  color: var(--background-cl);
+  background-color: var(--accent-cl);
+  border-radius: 4px;
+  border: none;
+  transition: background-color var(--transition-duration)
+    var(--transition-timing-function);
+}
+.footer-button-send:hover,
+.footer-button-send:focus {
+  background-color: var(--hover-cl);
+  cursor: pointer;
+}
 /* Modal */
 .modal-bg {
   position: fixed;
@@ -633,6 +650,8 @@ body {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   padding-left: 38px;
+  transition: border-color var(--transition-duration)
+    var(--transition-timing-function);
 }
 .modal-label-text-first {
   display: block;
@@ -650,23 +669,101 @@ body {
   letter-spacing: 0.01em;
   color: var(--customers-icon);
 }
-.modal-form-text{
+.modal-form-text {
   font-weight: 500;
   text-align: center;
   color: var(--secondary-txt-cl);
   margin-bottom: 16px;
 }
-.modal-label{
+.modal-label {
   margin-bottom: 8px;
 }
-.modal-form-svg{
+.modal-form-svg {
   position: absolute;
   left: 16px;
-  top: 11px;
+  top: 50%;
+  transform: translateY(-50%);
   fill: var(--secondary-txt-cl);
+  transition: fill var(--transition-duration) var(--transition-timing-function);
 }
-.modal-input-div{
+.modal-input-div {
   position: relative;
+}
+.modal-input:focus {
+  border-color: var(--accent-cl);
+  outline: none;
+}
+.modal-input:focus + .modal-form-svg {
+  fill: var(--accent-cl);
+}
+.modal-textarea {
+  resize: none;
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  transition: border-color var(--transition-duration)
+    var(--transition-timing-function);
+}
+.modal-textarea:focus {
+  outline: none;
+  border-color: var(--accent-cl);
+}
+.modal-textarea::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.04em;
+}
+.modal-label-privacy::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  cursor: pointer;
+  margin-right: 8px;
+  transition: outline var(--transition-duration)
+    var(--transition-timing-function);
+}
+.modal-input-privacy:checked + .modal-label-privacy::before {
+  background-color: var(--hover-cl);
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='8' viewBox='0 0 10 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.44558 0.255056C8.61838 0.089653 8.84834 -0.00178848 9.08693 2.65108e-05C9.32551 0.0018415 9.55407 0.0967713 9.72436 0.264784C9.89466 0.432797 9.99337 0.660752 9.99968 0.900549C10.006 1.14034 9.91939 1.37323 9.75816 1.55005L4.86357 7.70436C4.7794 7.79551 4.67782 7.86865 4.5649 7.91942C4.45198 7.97018 4.33003 7.99754 4.20636 7.99984C4.08268 8.00214 3.95981 7.97935 3.8451 7.93282C3.73038 7.88629 3.62618 7.81698 3.53872 7.72903L0.292827 4.46564C0.202435 4.38096 0.129933 4.27884 0.0796475 4.16537C0.0293621 4.05191 0.00232279 3.92942 0.000143182 3.80522C-0.00203643 3.68102 0.0206883 3.55765 0.0669613 3.44248C0.113234 3.3273 0.182108 3.22267 0.269473 3.13483C0.356838 3.047 0.460905 2.97775 0.575465 2.93123C0.690026 2.88471 0.812734 2.86186 0.936267 2.86405C1.0598 2.86624 1.18163 2.89343 1.29449 2.94398C1.40734 2.99454 1.50892 3.06743 1.59315 3.15831L4.16189 5.73967L8.42227 0.28219C8.42994 0.272694 8.43813 0.263635 8.4468 0.255056H8.44558Z' fill='%23F4F4FD'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.modal-input-privacy:focus + .modal-label-privacy::before {
+  outline: 1px solid var(--hover-cl);
+}
+.modal-label-privacy {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.04em;
+  color: var(--customers-icon);
+  margin-bottom: 24px;
+}
+.modal-send-button {
+  align-self: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--background-cl);
+  min-width: 169px;
+  padding: 16px 32px;
+  background-color: var(--accent-cl);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  transition: background-color var(--transition-duration)
+    var(--transition-timing-function);
+}
+.modal-send-button:hover,
+.modal-send-button:focus {
+  background-color: var(--hover-cl);
+  cursor: pointer;
 }
 /* Reset */
 
@@ -703,4 +800,17 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
