--- a/css/styles.css
+++ b/css/styles.css
@@ -527,12 +527,12 @@ body {
 .footer-svg-icon {
   fill: var(--section-cl);
 }
-.footer-form-container{ 
+.footer-form-container {
   margin-left: 80px;
 }
-.footer-form{
+.footer-form {
   display: flex;
-  gap: 24px
+  gap: 24px;
 }
 .footer-form-text {
   font-weight: 500;
@@ -551,7 +551,7 @@ body {
   transition: border var(--transition-duration)
     var(--transition-timing-function);
 }
-.footer-input::placeholder{
+.footer-input::placeholder {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
@@ -708,6 +708,8 @@ body {
   width: 100%;
   height: 120px;
   padding: 8px 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
   transition: border-color var(--transition-duration)
     var(--transition-timing-function);
 }
@@ -771,6 +773,9 @@ body {
 .modal-send-button:focus {
   background-color: var(--hover-cl);
   cursor: pointer;
+}
+.modal-privacy-policy {
+  color: var(--accent-cl);
 }
 /* Reset */
 
